Fixed fonts and aligned sccs/html

--- a/source/styles/_fonts.scss
+++ b/source/styles/_fonts.scss
@@ -1,14 +1,14 @@
 @font-face {
     font: {
-        font-family: 'Elliot';
+        family: 'Elliot';
         weight: 200;
     }
-    src: url("../assets/assets/fonts/Elliot-Thin.otf") format("opentype");
+    src: url("../assets/fonts/Elliot-Thin.otf") format("opentype");
 }
 
 @font-face {
     font: {
-        font-family: 'Elliot';
+        family: 'Elliot';
         weight: 300;
     }
     src: url("../assets/fonts/Elliot-Light.otf") format("opentype");
@@ -16,16 +16,16 @@
 
 @font-face {
     font: {
-        font-family: 'Elliot';
+        family: 'Elliot';
         weight: 300;
-        font-style: italic;
+        style: italic;
     }
     src: url("../assets/fonts/Elliot-LightItalic.otf") format("opentype");
 }
 
 @font-face {
     font: {
-        font-family: 'Elliot';
+        family: 'Elliot';
         weight: 400;
     }
     src: url("../assets/fonts/Elliot.otf") format("opentype");
@@ -33,16 +33,16 @@
 
 @font-face {
     font: {
-        font-family: 'Elliot';
+        family: 'Elliot';
         weight: 400;
-        font-style: italic;
+        style: italic;
     }
     src: url("../assets/fonts/Elliot-Italic.otf") format("opentype");
 }
 
 @font-face {
     font: {
-        font-family: 'Elliot';
+        family: 'Elliot';
         weight: 700;
     }
     src: url("../assets/fonts/Elliot-Bold.otf") format("opentype");
