--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -20,7 +20,7 @@ h1 {
 }
 
 p {
-  font-weight: 200;
+  font-weight: 400;
   font-size: 16px;
   letter-spacing: 0.4px;
 }
